# rpl-structural-attack-observability

./: .gitignore  README.md  pyproject.toml
data/: README.md  experiment_matrix_template.csv
docs/: architecture.md  attack_rate_guide.md  changelog.md  experiments_result.md  figures_tables.md  logging_spec.md  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib  research_plan.tex  setup_guide.md  tables_table1_sim_params.csv
docs/tables/: table1_sim_params.csv  table2_pdr_ci.csv
rpl_observability/: __init__.py  analysis.py  cli.py  metrics.py
scripts/: analyze_logs.py  analyze_results.py  compute_exposure_mix.py  compute_exposure_tree.py  extract_parent_stats.py  extract_parent_stats_batch.py  generate_figures.R  monitor_simulation.py  monitor_simulation.sh  parse_cooja_logs.py  quick_test_scenarios.sh  run_cooja_headless.py  run_experiment_matrix.py  run_experiments.sh  run_full_workflow.sh  test_attack_rate.sh  test_firmware_build.sh  validate_exposure.py
simulations/: README.md
simulations/firmware/: Makefile  README.md  rpl-node.c
simulations/output/: README.md  quick_test_summary_20260204_211219.txt  quick_test_summary_20260204_211457.txt  simulation_summary_20260204_220748.csv  simulation_summary_20260204_221001.csv  simulation_summary_20260204_230425.csv  simulation_summary_20260204_230503.csv
simulations/scenarios/: README.md  SCENARIO_COORDINATES.md  rpl_topology_10nodes.csc  scenario_a_low_exposure.csc  scenario_b_high_exposure.csc  scenario_b_high_exposure_20.csc  scenario_c_high_pd.csc  scenario_d_apl_bc.csc
